Correcciones menores y lavado de cara para su despliegue en Producción

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -50,8 +50,9 @@
               <li class="active"><a href="#/"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</a></li>
               <li><a ng-href="#/entrada"><i class="glyphicon glyphicon-circle-arrow-right"></i> Ficheros de entrada</a></li>
               <li><a ng-href="#/salida"><i class="glyphicon glyphicon-circle-arrow-left"></i> Ficheros de salida</a></li>
-              <li><a ng-href="#/atencion"><i class="glyphicon glyphicon-exclamation-sign"></i> Requieren atención</a></li>
+              <!--<li><a ng-href="#/atencion"><i class="glyphicon glyphicon-exclamation-sign"></i> Requieren atención</a></li>
               <li><a ng-href="#/revision"><i class="glyphicon glyphicon-list-alt"></i> Revisión ficheros</a></li>
+              -->
               <li id="logout" ng-show="currentUser"><a ng-click="logout()"><i class="glyphicon glyphicon-off"></i> Logout {{currentUser.username}}</a></li>
             </ul>
           </div>
