--- a/client/app/index.html
+++ b/client/app/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/vertical_offset.css">
     <link rel="stylesheet" href="styles/animate.css">
+    <link rel="stylesheet" href="styles/animate_daneden.css">
     <!-- endbuild -->
   </head>
   <body ng-app="meanApp">
@@ -47,9 +48,10 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</a></li>
-              <li><a ng-href="#/entrada"><i class="glyphicon glyphicon-circle-arrow-right"></i> Ficheros de entrada</a></li>
-              <li><a ng-href="#/salida"><i class="glyphicon glyphicon-circle-arrow-left"></i> Ficheros de salida</a></li>
+              <li id="dashboard" class="active" ng-click="setActive('dashboard')"><a href="#/"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</a></li>
+              <li id="entrada" ng-click="setActive('entrada')"><a ng-href="#/entrada"><i class="glyphicon glyphicon-circle-arrow-right"></i> Ficheros de entrada</a></li>
+              <li id="salida" ng-click="setActive('salida')"><a ng-href="#/salida"><i class="glyphicon glyphicon-circle-arrow-left"></i> Ficheros de salida</a></li>
+              <li id="audit" ng-click="setActive('audit')"><a ng-href="#/audit"><i class="glyphicon glyphicon-eye-open"></i> Auditoría</a></li>
               <!--<li><a ng-href="#/atencion"><i class="glyphicon glyphicon-exclamation-sign"></i> Requieren atención</a></li>
               <li><a ng-href="#/revision"><i class="glyphicon glyphicon-list-alt"></i> Revisión ficheros</a></li>
               -->
@@ -67,8 +69,9 @@
     <div class="vert-offset-top-5 footer" id="footer">
       <div class="container">
         <div class="footer-logo"><img src="images/logo_silenus.png" width="150em" /></div>
+        <div class="footer-logo"><img src="images/logo_smartgreen.png" width="130em" /></div>
         <div class="footer-logo"><img src="images/logo_itelsis.png" width="100em" /></div>
-        <div class="footer-copyright">Copyright &copy; 2016 Silenus Consultoría (Itelsis Group). All rights reserved.</div>
+        <div class="footer-copyright">Copyright &copy; 2016 Silenus Consultoría (Itelsis Group).<br/>All rights reserved.</div>
       </div>
     </div>
 
@@ -125,6 +128,9 @@
         <script src="scripts/controllers/entrada/entrada_detalle.js"></script>
         <script src="scripts/controllers/salida/salida.js"></script>
         <script src="scripts/controllers/salida/salida_detalle.js"></script>
+        <script src="scripts/controllers/audit/audit.js"></script>
+        <script src="scripts/directives/custom-timeline.js"></script>
+        <script src="scripts/directives/custom-timeline-entry.js"></script>
         <!-- endbuild -->
 </body>
 </html>
