--- a/client/app/index.html
+++ b/client/app/index.html
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
     <div ng-view=""></div>
     </div>
 
@@ -131,6 +131,7 @@
         <script src="scripts/controllers/audit/audit.js"></script>
         <script src="scripts/directives/custom-timeline.js"></script>
         <script src="scripts/directives/custom-timeline-entry.js"></script>
+        <script src="scripts/directives/set-class-when-at-top.js"></script>
         <!-- endbuild -->
 </body>
 </html>
