- Se crea el módulo de comprobaciones de datos - Se crean los componentes checkAgsMeasure y checkAgsWithoutMeasure en el anterior módulo - Se añade un mensaje de error ante error de carga de datos en Audit

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,6 +52,7 @@
               <li id="entrada" ng-click="setActive('entrada')"><a ng-href="#!/entrada"><i class="glyphicon glyphicon-circle-arrow-right"></i> Ficheros de entrada</a></li>
               <li id="salida" ng-click="setActive('salida')"><a ng-href="#!/salida"><i class="glyphicon glyphicon-circle-arrow-left"></i> Ficheros de salida</a></li>
               <li id="audit" ng-click="setActive('audit')"><a ng-href="#!/audit"><i class="glyphicon glyphicon-eye-open"></i> Auditoría</a></li>
+              <li id="check" ng-click="setActive('check')"><a ng-href="#!/check"><i class="glyphicon glyphicon-tree-deciduous"></i> Comprobaciones</a></li>
               <!--<li><a ng-href="#/atencion"><i class="glyphicon glyphicon-exclamation-sign"></i> Requieren atención</a></li>
               <li><a ng-href="#/revision"><i class="glyphicon glyphicon-list-alt"></i> Revisión ficheros</a></li>
               -->
@@ -125,6 +126,7 @@
     <script src="scripts/controllers/salida/salida.js"></script>
     <script src="scripts/controllers/salida/salida_detalle.js"></script>
     <script src="scripts/controllers/audit/audit.js"></script>
+    <script src="scripts/controllers/check/check.js"></script>
     <script src="scripts/directives/custom-timeline.js"></script>
     <script src="scripts/directives/custom-timeline-entry.js"></script>
     <script src="scripts/directives/set-class-when-at-top.js"></script>
@@ -135,6 +137,8 @@
     <script src="components/listDetailAudit/controller_review.js"></script>
     <script src="components/baldDetailAudit/controller.js"></script>
     <script src="components/baldDetailAudit/controller_review.js"></script>
+    <script src="components/checkAgsWithoutMeasure/controller.js"></script>
+    <script src="components/checkAgsMeasure/controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
