- Se crea el módulo de operaciones - Se crean los componentes operationResponseObje que permitirá responder a las objeciones de las comercializadoras de motivo 700 y 800.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -53,6 +53,7 @@
               <li id="salida" ng-click="setActive('salida')"><a ng-href="#!/salida"><i class="glyphicon glyphicon-circle-arrow-left"></i> Ficheros de salida</a></li>
               <li id="audit" ng-click="setActive('audit')"><a ng-href="#!/audit"><i class="glyphicon glyphicon-eye-open"></i> Auditoría</a></li>
               <li id="check" ng-click="setActive('check')"><a ng-href="#!/check"><i class="glyphicon glyphicon-tree-deciduous"></i> Comprobaciones</a></li>
+              <li id="operation" ng-click="setActive('operation')"><a ng-href="#!/operation"><i class=" glyphicon glyphicon-dashboard"></i> Operaciones</a></li>
               <!--<li><a ng-href="#/atencion"><i class="glyphicon glyphicon-exclamation-sign"></i> Requieren atención</a></li>
               <li><a ng-href="#/revision"><i class="glyphicon glyphicon-list-alt"></i> Revisión ficheros</a></li>
               -->
@@ -127,6 +128,7 @@
     <script src="scripts/controllers/salida/salida_detalle.js"></script>
     <script src="scripts/controllers/audit/audit.js"></script>
     <script src="scripts/controllers/check/check.js"></script>
+    <script src="scripts/controllers/operation/operation.js"></script>
     <script src="scripts/directives/custom-timeline.js"></script>
     <script src="scripts/directives/custom-timeline-entry.js"></script>
     <script src="scripts/directives/set-class-when-at-top.js"></script>
@@ -139,6 +141,8 @@
     <script src="components/baldDetailAudit/controller_review.js"></script>
     <script src="components/checkAgsWithoutMeasure/controller.js"></script>
     <script src="components/checkAgsMeasure/controller.js"></script>
+    <script src="components/operationResponseObje/controller.js"></script>
+    <script src="components/operationResponseObje/controller_modal.js"></script>
     <!-- endbuild -->
 </body>
 </html>
