--- a/client/app/index.html
+++ b/client/app/index.html
@@ -144,6 +144,7 @@
     <script src="components/operationResponseObje/controller.js"></script>
     <script src="components/operationResponseObje/controller_response_objeinme.js"></script>
     <script src="components/operationResponseObje/controller_response_aobjeagcl.js"></script>
+    <script src="components/checkObjesWithoutAnswer/controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
