Se añade componente para obtener los CUPS que conforman una agregación en un momento dado Se añade componente para comprobar el estado de todas las objeciones registradas en el sistema (de cualquier tipo)

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -145,6 +145,8 @@
     <script src="components/operationResponseObje/controller_response_objeinme.js"></script>
     <script src="components/operationResponseObje/controller_response_aobjeagcl.js"></script>
     <script src="components/checkObjesWithoutAnswer/controller.js"></script>
+    <script src="components/checkObjes/controller.js"></script>
+    <script src="components/checkAgcl/controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
