Se añade la validación para auditoría. Inicialmente se hará solo de CIERRES. Se añaden las objeciones de tipo AREVAC al listado de objeciones

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -147,6 +147,7 @@
     <script src="components/checkObjesWithoutAnswer/controller.js"></script>
     <script src="components/checkObjes/controller.js"></script>
     <script src="components/checkAgcl/controller.js"></script>
+    <script src="components/auditValidations/controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
