--- a/client/app/index.html
+++ b/client/app/index.html
@@ -144,6 +144,9 @@
     <script src="components/operationResponseObje/controller.js"></script>
     <script src="components/operationResponseObje/controller_response_objeinme.js"></script>
     <script src="components/operationResponseObje/controller_response_aobjeagcl.js"></script>
+    <script src="components/operationResponseObje/controller_response_objeinmere.js"></script>
+    <script src="components/operationResponseObje/controller_response_aobjeagrere.js"></script>
+    <script src="components/operationResponseObje/controller_response_aobjecil.js"></script>
     <script src="components/checkObjesWithoutAnswer/controller.js"></script>
     <script src="components/checkObjes/controller.js"></script>
     <script src="components/checkAgcl/controller.js"></script>
