- Se añade una nuevo bloque de comprobaciones de inventario - Se modifican las respuestas de AOBJEAGREREs para que contemplen el formato de las viejas y nuevas agregaciones

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -150,6 +150,7 @@
     <script src="components/checkObjesWithoutAnswer/controller.js"></script>
     <script src="components/checkObjes/controller.js"></script>
     <script src="components/checkAgcl/controller.js"></script>
+    <script src="components/checkCupsInventory/controller.js"></script>
     <script src="components/auditValidations/controller.js"></script>
     <!-- endbuild -->
 </body>
