- Se añaden 2 pestañas de comprobaciones extra de inventario

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -151,6 +151,8 @@
     <script src="components/checkObjes/controller.js"></script>
     <script src="components/checkAgcl/controller.js"></script>
     <script src="components/checkCupsInventory/controller.js"></script>
+    <script src="components/checkAgclInventory/controller.js"></script>
+    <script src="components/checkAgclDivergence/controller.js"></script>
     <script src="components/auditValidations/controller.js"></script>
     <!-- endbuild -->
 </body>
